Fix background image filename in section-1

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
 <h1>Explore Responsibly</h1>
 
 </section>
-<section id="section-1" class="slide level2 center" data-background-image="img/CR-community.png" data-background-size="cover" data-background-opacity="0.6">
+<section id="section-1" class="slide level2 center" data-background-image="img/CRCommunity.png" data-background-size="cover" data-background-opacity="0.6">
 <h2></h2>
 <div class="r-fit-text" style="color: darkgrey; text-shadow: 4px 8px 8px black;">
 <p><strong>Cambodia Awaits</strong></p>
